# thingy91-fall-detection

./: .gitignore  README.md
api-server-gcp/: README.md  api.js  package.json
cloudflare-worker/: README.md  main.js
data_processing/matchNRFLog/: main.py  output.csv  rest5.txt
firmware/adxl362/: CMakeLists.txt  prj.conf
firmware/adxl362-data-collection/: CMakeLists.txt  prj.conf
firmware/adxl362-data-collection/src/: main.cpp
firmware/adxl362/boards/: thingy91_nrf9160_ns.overlay
firmware/adxl362/model-parameters/: anomaly_clusters.h  anomaly_types.h  dsp_blocks.h  model_metadata.h  model_variables.h
firmware/adxl362/src/: main.c  main.cpp
firmware/asset_tracker_v2/child_image/spm/: prj.conf
firmware/at_client/: prj.conf
firmware/hello_world/: prj.conf
firmware/hello_world/boards/: nrf52840_nrf52840.conf  nrf52840dk_nrf52840.overlay
firmware/hello_world/src/: main.c
firmware/https_client/: CMakeLists.txt  prj.conf
firmware/https_client/src/: main.bak  main.c
firmware/led_pwm/src/: main.c
server/: package-lock.json  package.json
server/src/: index.js
